--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -15,9 +15,14 @@
   <div class="row">         
     <div class="large-4 columns centered ">
       <%= image_tag("math.jpg")%>
-      <div class="panel">     
+      <div class="panel">        
         <h3><%= Subject.find(1).section %></h3>
-        <h6 class="subheader"><%= link_to "See Courses", user_subject_path(current_user, Subject.find(1))%></h6>
+        <h6 class="math-subheader">See Courses</h6>
+        <div class="math-slider" visibility: hidden>
+          <% @math_subjects.each do |subject| %>
+          <p><%= link_to "#{subject.name}", user_subject_path(current_user, subject.id) %></p>
+          <% end %> 
+        </div>
       </div>
     </div>
     
@@ -25,7 +30,12 @@
       <%= image_tag("math.jpg")%>
       <div class="panel">
         <h3><%= Subject.find(2).section%></h3>
-        <h6 class="subheader"><%= link_to "See Courses" , user_subject_path(current_user, Subject.find(2))%></h6>
+        <h6 class="reading-subheader">See Courses</h6>
+        <div class="reading-slider" visibility: hidden>
+          <% @read_subjects.each do |subject| %>
+          <p><%= link_to "#{subject.name}", user_subject_path(current_user, subject.id) %></p>
+          <% end %> 
+        </div>
       </div>
     </div>
               
@@ -33,11 +43,42 @@
       <%= image_tag("math.jpg")%>
       <div class="panel">
         <h3><%= Subject.find(3).section%></h3>
-        <h6 class="subheader"><%= link_to "See Courses", user_subject_path(current_user, Subject.find(3))%></h6>
+        <h6 class="writing-subheader">See Courses</h6>
+        <div class="writing-slider" visibility: hidden>
+          <% @write_subjects.each do |subject| %>
+          <p><%= link_to "#{subject.name}", user_subject_path(current_user, subject.id) %></p>
+          <% end %> 
+        </div>
       </div>
     </div>           
   </div>
   <!-- End Thumbnails -->
+
+<script type="text/javascript"> 
+ $('.writing-subheader').mouseover(function(e){
+    $('.writing-slider').toggle("slide");
+  }); 
+ 
+  $('.reading-subheader').mouseover(function(e){
+    $('.reading-slider').toggle("slide");
+  });
+
+
+  $('.math-subheader').mouseover(function(e){
+    $('.math-slider').toggle("slide");
+  });
+
+  
+  
+
+
+</script>
+
+
+
+
+
+
 
   <!-- Footer -->
 <footer class="bottom">
