Adds blog scaffold and admin create function

--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -4,6 +4,7 @@
      <h2>All Lessons</h2>
      <a href="<%= admin_users_path %>" class="small button">View Users</a>
     <a href="<%= new_admin_subject_path %>" class="small button">Create A New Subject</a>
+    <a href="<%= new_post_path %>" class="small button">Write Blog Post</a>
     <br>
 
 <div class="row">
