--- a/app/views/admin/pages/edit.html.erb
+++ b/app/views/admin/pages/edit.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:body_id, "admin_pages") %>
+<% content_for(:body_id, "admin-pages") %>
 <div class="row">
   <div class="columns large-12">
     <h1>Edit Page Sequence</h1>
