--- a/app/views/admin/users/_show.html.erb
+++ b/app/views/admin/users/_show.html.erb
@@ -9,3 +9,4 @@
              <td><%= link_to '<i class="fa fa-eye"></i>'.html_safe, admin_user_path(user) %></td>
              <td><%= link_to '<i class="fa fa-envelope"></i>'.html_safe, admin_user_path(user) %></td>
              <td><%= render partial: 'form', locals: {user: user} %></td>
+             <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_users_path, confirm: "Are you sure?", method: :delete %></td>
