--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:body_id, "admin_pages") %> 
+<% content_for(:body_id, "admin-pages") %> 
 <h1 class="page-title">Users</h1>
 <div class="row">
   <div class= "large-12 columns">
