update report view for no progress

--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -34,11 +34,17 @@
 	      <h3><%= link_to "Resume Lesson", current_page(current_user, @subject) %><h3>
 	    <% else %>
 	      <h3><%= link_to "Start Lesson", start_page(current_user, @subject) %><h3>
-	    <% end %>
-         <!--  <ul class="inline-list">
-            <li><a href="">Reply</a></li>
-            <li><a href="">Share</a></li>
-          </ul>  -->         
+	    <% end %>                 
+        </div>
+        <div class="small-9 large-10 columns">
+          Some information about the test.
+          Some information about the test.
+          Some information about the test.
+          Some information about the test.
+          Some information about the test.
+          Some information about the test.
+          Some information about the test.
+          Some information about the test.
         </div>
       </div>
 		</div>
