--- a/app/assets/stylesheets/report.css.scss
+++ b/app/assets/stylesheets/report.css.scss
@@ -10,16 +10,20 @@ background-image: url("retina_wood.png");
 background-repeat: no-repeat;
 background-size: 100% auto;
 
-.report .panel {
-	background: url("retina_wood.png");
-	opacity: 0.4;	
-		
-	}
+h2, h3 {
+	font-family: 'Covered By Your Grace'; 
+}
+
+
+.report {
 	
-.incomplete { 
+	color: white;
+}
+
+.report .incomplete { 
 			color: $incomplete;
 		}
-.complete {
+.report  .complete {
 			color: $complete;
 		}	
 }
