--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -21,11 +21,11 @@
 
               <% @subjects.each do |subject| %>
                 
-                <tr>
+                <tr id='<%= subject.id %>'>
                 <% if subject.section == "Math" %>
                   <td><%= subject.name %></td>
                   <td><%= link_to '<i class="fa fa-wrench"></i>'.html_safe, admin_subject_pages_path(subject) %></td> 
-                  <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_path(subject), confirm: "Are you sure?", method: :delete %></td>
+                  <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_path(subject), data: {confirm: "Are you sure?"}, method: :delete, remote: true %></td>
                   <td>
                     <% if subject.published == false %>
                       <%= render partial: 'publish', locals: {subject: subject} %>
