update question/instruction viw

--- a/app/assets/stylesheets/report.css.scss
+++ b/app/assets/stylesheets/report.css.scss
@@ -12,18 +12,8 @@ background-size: 100% auto;
 
 h2, h3 {
 	font-family: 'Covered By Your Grace'; 
+	}
+.panel {
+	max-width: 400px;
 }
-
-
-.report {
-	
-	color: white;
-}
-
-.report .incomplete { 
-			color: $incomplete;
-		}
-.report  .complete {
-			color: $complete;
-		}	
 }
