--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,94 +4,60 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/foundation/4.3.1/js/foundation.min.js"></script>     
-<br>
-      <div class="row">
-        <div class="columns large-12 centered">
-          <div class="radius panel callout ">
-            <h3><%= @subject.name %></h3>       
-          </div>
+
+      <div class="panel">
+        <div class="row">
+          <h3><%= @subject.name %></h3>       
         </div>
       </div>
-      </div>
-        <!-- End Header Content -->
-         <div class="row">
-          <div class="columns large-12 large-centered">
+
+<!-- End Header Content -->
+        
+          <div class="large-4 columns centered">
             <div class="panel">
               <h6><%= @question.body %></h6>
-             <div class="field">
-              <div class="choices">
-                <% @question.choices.each do |choice| %>
-                  <div class="choice" >
-                    <%= radio_button :question, :choices, choice %>
-                    <%= choice %><br>
-                  </div>            
-                <%end%>
-              </div> 
-            </div>
-          </div>           
-        
-          <div class="submit">
-            <button class="button small round" type="button">Check Answer</button> 
-          </div>
-        </div>
-        <!-- End Search Bar -->
-        <!-- Thumbnails -->
-        
-          
-          <div class="large-8 small-6 columns"> 
-            <div class="panel" visibility: hidden >
-             <h4></h4>
-              <h3><%= link_to 'Next Page', next_page(current_user, @page)%></h3>
-              <%= progress_bar(progress(@page))%>         
-            </div>
-
-            
-          </div>
-        <!-- End Thumbnails -->
-        <!-- Footer -->
-        <footer class="row">
-          <div class="large-12 columns">
-            <hr>
-            <div class="row">
-              
-              <div class="large-6 columns">
-                <ul class="inline-list ">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Your Progress</a></li>
-                  <li>All Lessons
-   
-                  
-                </ul>
-                <div class="large-6 columns">
-                
+              <div class="field">
+                <div class="choices subheader ">
+                  <% @question.choices.each do |choice| %>
+                    <div class="choice slider" >
+                      <%= radio_button :question, :choices, choice %>
+                      <%= choice %><br>
+                    </div>            
+                  <%end%>
+                </div> 
+                <div class="submit">
+                  <button class="button small" type="button">Check Answer</button> 
+                </div>
+                <div class="panel-notify" visibility: hidden>
+                    <h4></h4>
+                    <%= progress_bar(progress(@page))%>
+                    <h3><%= link_to 'Next Page', next_page(current_user, @page)%></h3>                
+                  </div>      
               </div>
-            </div>
-          </div>
-        </footer>
-        <!-- End Footer -->
-      </div>
-    </div>   
+            </div>                
+          </div>     
+      
     
 
 <script type="text/javascript">	
 
 	$('.submit').on("click", function(e){
-
 		// Grab value that user selected
 		var user_choice = $('.choice input:checked').val();
 		// Compare with actual answer
 		if (user_choice == <%= @question.correct_answer%>){
-			$('.panel').toggle("slide");
-			$('.panel h4').addClass('success label').append("Correct!");
-			$('.submit').toggle();			
-			$('.progress').toggle();
-      $('.progress').show();
+			$('.panel-notify').toggle();
+			$('.panel-notify h4').addClass('success label').append("Correct!");
+			$('.submit').hide();
+      $('.progress').toggle();
+      $('.progress').show();			
+      
 			
 
 		}
 		else {
-      $('.panel').toggle('slide');
-			$('.panel h4').addClass('alert label').append("Incorrect!");
+      $('.panel-notify').toggle('slide');
+			$('.panel-notify h4').addClass('alert label').append("Incorrect!");
 			$('.submit').toggle();
 			$('.progress').toggle();
 			$('.progress').show();
