--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -24,28 +24,27 @@
 
       <!-- Feed Entry -->
       <div class="row">
-        <div class="small-3 large-2 columns "><%= image_tag "math.jpg"%></div>
+        
         <div class="small-9 large-10 columns">
         <h2><%= @subject.name %></h2>
 	    <% if current_user.completed_subject?(@subject)%>
 	      <h6 class="complete">Completed Lesson</h6>	     	
-	      <%= link_to "Review", start_page(current_user, @subject)%>
+	      <h6 class="subheader"><%= link_to "Review", start_page(current_user, @subject)%></h6>
 	    <% elsif current_user.started_subject?(@subject) %>          
 	      <h3><%= link_to "Resume Lesson", current_page(current_user, @subject) %><h3>
 	    <% else %>
 	      <h3><%= link_to "Start Lesson", start_page(current_user, @subject) %><h3>
 	    <% end %>                 
-        </div>
-        <div class="small-9 large-10 columns">
+        
+          <h6 class="subheader">Some information about the test.
           Some information about the test.
           Some information about the test.
           Some information about the test.
           Some information about the test.
           Some information about the test.
           Some information about the test.
-          Some information about the test.
-          Some information about the test.
-        </div>
+          Some information about the test. </h6>
+       </div>
       </div>
 		</div>
 </body>
