--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -11,9 +11,17 @@
         </div>
       </div>
 
-<!-- End Header Content -->
-        
-          <div class="large-4 columns centered">
+<!-- End Header Content --> 
+            
+
+
+
+
+
+
+        <div class="row ">
+          <div class="large-4 columns recommended">
+          <ul class="pricing table">
             <div class="panel">
               <h6><%= @question.body %></h6>
               <div class="field">
@@ -34,8 +42,10 @@
                     <h3><%= link_to 'Next Page', next_page(current_user, @page)%></h3>                
                   </div>      
               </div>
-            </div>                
-          </div>     
+            </div> 
+            </ul>               
+          </div>  
+          </div>   
       
     
 
