--- a/app/views/admin/instructions/_form.html.erb
+++ b/app/views/admin/instructions/_form.html.erb
@@ -22,6 +22,7 @@
   </div>
   
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'tiny button' %>
+    <%= link_to "Back" , admin_subject_page_path(@subject, @page), class: 'tiny button' %>
   </div>
 <% end %>
