--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -1,59 +1,50 @@
 <% content_for(:body_id, "admin-pages") %> 
 
-<div class="row lesson" id="lesson-pages">
-  <div class="columns large-12">
-  <h1 class="page-title"><%= @subject.name %></h1>
-  <%= link_to 'Edit Title', edit_admin_subject_path(@subject) %>
-
-  <table width="100%">
-    <thead>
-      <tr>
-        <th>Sequence</th>
-        <th>Page Type</th>
-        <th>Content</th>
-        
-      </tr>
-    </thead>
-
- 
-    <tbody>
+<div class="row">
+  <div class="large-12 columns">
+    <div>
+      <h1 class="page-title"><%= @subject.name %></h1>
+      <div class="center-buttons"><%= link_to 'Edit Title', edit_admin_subject_path(@subject), class: 'tiny button' %>
      
-      <% @subject.page_order.each do |page| %>
-        <tr>
-          <td><%= page.sequence_id %></td>
-          <td><%= page.pageable_type %></td>
-          <td><%= page.body_snippet %></td>  
-          <td><% if page.pageable_type == "Question" %>
-            <%= link_to "Question Preview", admin_subject_question_path(@subject, page.pageable) %>
-            <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
-            <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_page_path(@subject, page), confirm: "Are you sure?", method: :delete %></td>
-            <td><% elsif page.pageable_type == "Instruction" %>
-            <%= link_to "Instruction Preview", admin_subject_instruction_path(@subject, page.pageable) %>
-            <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
-            <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_page_path(@subject, page), confirm: "Are you sure?", method: :delete %></td>
-            <% end %>
-          
-          
+    </div>
+  </div>
+</div>
 
-        
-
-
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-
-  <br>
-  <div class = "center-buttons">
-    <a href="<%= new_admin_subject_question_path %>" class="button">Create A New Question</a>
-   
-    <a href="<%= new_admin_subject_instruction_path %>" class="button">Create A New Instruction</a>
-   
-    <br>
-
-    <a href="<%= admin_subjects_path %>" class="small button">Back to Admin Subject Page</a>
-    
-
+<div class="row">
+  <div class="large-12 columns">
+    <div class="panel">
+      <div class = "center-buttons">
+        <a href="<%= new_admin_subject_question_path %>" class="button">Create A New Question</a>
+        <a href="<%= new_admin_subject_instruction_path %>" class="button">Create A New Instruction</a>
+      </div>
+      <table width="100%">
+        <thead>
+          <tr>
+            <th>Sequence</th>
+            <th>Page Type</th>
+            <th>Content</th>     
+          </tr>
+        </thead>
+        <tbody>
+          <% @subject.page_order.each do |page| %>
+            <tr>
+              <td><%= page.sequence_id %></td>
+              <td><%= page.pageable_type %></td>
+              <td><%= page.body_snippet %></td>  
+              <td><% if page.pageable_type == "Question" %>
+                <%= link_to "Question Preview", admin_subject_question_path(@subject, page.pageable) %>
+                <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
+                <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_page_path(@subject, page), confirm: "Are you sure?", method: :delete %></td>
+                <td><% elsif page.pageable_type == "Instruction" %>
+                <%= link_to "Instruction Preview", admin_subject_instruction_path(@subject, page.pageable) %>
+                <td><%= link_to "Update Page Sequence", edit_admin_subject_page_path(@subject, page) %></td>
+                <td><%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, admin_subject_page_path(@subject, page), confirm: "Are you sure?", method: :delete %></td>
+                <% end %>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+       <div><a href="<%= admin_subjects_path %>" class="tiny button">Back to Admin Subject Page</a></div>
     </div>
   </div>
 </div>
