--- a/app/views/admin/instructions/edit.html.erb
+++ b/app/views/admin/instructions/edit.html.erb
@@ -1,5 +1,15 @@
-<h1>Editing instruction</h1>
+<% content_for(:body_id, "admin-pages") %> 
 
-<%= render 'form' %>
+<div class="row lesson" id="lesson-pages">
+  <div class="large-12 columns">
+    <h1 class="page-title">Edit <%= @subject.name %> Page <%=@instruction.page.sequence_id %></h1>
+  </div>
+</div>
 
-<td><%= link_to "Back" , admin_subject_page_path(@subject, @page) %></td>
+<div class="row">
+  <div class="large-12 columns ">
+    <div class="panel edit-table">
+    <%= render 'form' %>
+    </div>  
+  </div>
+</div>
