--- a/app/views/admin/instructions/new.html.erb
+++ b/app/views/admin/instructions/new.html.erb
@@ -1,18 +1,16 @@
 <% content_for(:body_id, "admin-pages") %>
 <div class="row">
   <div class="columns large-12">
-    <h1>New Instruction Page</h1>
+    <h1 class="page-title">New <%= @subject.name %> Instruction Page</h1>
   </div>
 </div>
 
 <div class="row">
-  <div class="small-6 small-2 columns">
+  <div class="large-12 columns ">
+    <div class="panel pageable-table">
     <%= render 'form' %>
-</div>
-
-
-<div class="row">
-  <div class="columns large-12">
-  <%= link_to 'Back', admin_subject_pages_path %>
+    </div>  
   </div>
 </div>
+
+
