--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -22,7 +22,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :text_choices, "Choices" %><br>
+    <%= f.label :text_choices, "Choices: Enter one choice on each line, followed by the enter key." %><br>
     <%= f.text_area :text_choices %>
   </div>
   
@@ -32,6 +32,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'tiny button' %>
+    <%= link_to "Back" , admin_subject_page_path(@subject, @page), class: 'tiny button' %>
   </div>
 <% end %>
