--- a/app/views/admin/subjects/edit.html.erb
+++ b/app/views/admin/subjects/edit.html.erb
@@ -1,17 +1,15 @@
 <% content_for(:body_id, "admin-pages") %>
 <div class="row">
   <div class="columns large-12">
-    <h1>Editing <%= @subject.name %></h1>
+    <h1 class="page-title">Editing <%= @subject.name %> Title</h1>
   </div>
 </div>
 
 <div class="row">
-  <div class="small-6 small-2 columns">
+  <div class="large-12 columns">
+    <div class="panel small-edit-table">
     <%= render 'form' %>
-</div>
-
-<div class="row">
-  <div class="columns large-12">
-    <%= link_to 'Back', admin_subjects_path %>
+    </div>
   </div>
 </div>
+
