--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,15 +1,23 @@
 <% content_for(:body_id, "admin-pages") %> 
-<h1 class="page-title">Users</h1>
+<div class="row">
+  <div class="large-12 columns">
+    <h1 class="page-title">Users</h1>
+    <div class="center-buttons">
+      <a href="<%= admin_subjects_path %>" class="tiny button">Back to Admin Subject Page</a>
+    </div>
+  </div>
+</div>
+
+
 <div class="row">
   <div class= "large-12 columns">
     <div class= "large-6 columns">
       <div class= "panel">
-        <h3>Admin</h3>
+        <h3>Admin:</h3>
         <table width="100%">
           <thead>
           </thead>
           <tbody>
-            <tr>
               <% @users.each do |user| %>
               <% if user.admin == true %>
                 <%= render "show", user: user %>
@@ -23,12 +31,11 @@
   
     <div class= "large-6 columns">
       <div class= "panel user-table">
-        <h3>Students</h3>
+        <h3>Students:</h3>
         <table width="100%">
           <thead>
           </thead>
-          <tbody> 
-            <tr>   
+          <tbody>    
               <% @users.each do |user| %>
                 <% if user.admin == false %>
                   <%= render "show", user: user %>
