--- a/app/views/admin/users/index.js.erb
+++ b/app/views/admin/users/index.js.erb
@@ -1,4 +1,12 @@
 
 
-alert('User updated!');
+alert('clicked');
 
+
+$(function() {
+  $('.edit_user input[type=checkbox]').click(function(){
+  alert('checkbox!');
+  });
+});
+
+ 
