--- a/app/assets/stylesheets/admin_pages.css.scss
+++ b/app/assets/stylesheets/admin_pages.css.scss
@@ -4,7 +4,9 @@ $darkcolor: darken($prepifycolor, 40%);
 $lightcolor: lighten($prepifycolor, 20%);
 
 background-color: $prepifycolor;
+/*background-image: url("retina_wood.png");*/
 background-image: url("ticks.png");
+
 background-repeat: no-repeat;
 background-size: 100% auto;
 
