--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,29 +1,15 @@
-<h1>Listing posts</h1>
+<% content_for(:body_id, "blog") %> 
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.body %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+</Script>
+<div class="row">
+<h1>Blog</h1>
+  <% @posts.each do |post| %>
+      <%= render :partial => post %>
+      <% if current_user.admin? %>
+        <p><%= link_to 'View', post %> | <%= link_to 'Edit', edit_post_path(post) %> | <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      <% else %>
+        <p><%= link_to 'View', post %></p>
+      <% end %>
+  <% end %>
+</div>
