--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -44,7 +44,7 @@
           <% end %>
         </tbody>
       </table>
-       <div><a href="<%= admin_subjects_path %>" class="tiny button">Back to Admin Subject Page</a></div>
+       <div><a href="<%= admin_subjects_path %>" class="tiny button">Back to Admin Dashboard</a></div>
     </div>
   </div>
 </div>
