--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -6,7 +6,7 @@
   <div class="large-12 columns">
     <h1 class="page-title">Users</h1>
     <div class="center-buttons">
-      <a href="<%= admin_subjects_path %>" class="tiny button">Back to Admin Subject Page</a>
+      <a href="<%= admin_subjects_path %>" class="tiny button">Back to Admin Dashboard</a>
     </div>
   </div>
 </div>
