Add jquery to Create Lesson buttons, but all 3 forms render when one is clicked.

--- a/app/views/admin/subjects/_new_writing_form.erb
+++ b/app/views/admin/subjects/_new_writing_form.erb
@@ -18,6 +18,6 @@
     <%= f.text_field :name %>
   </div>
   <div class="large-5 columns actions">
-    <%= f.submit class: 'tiny button' %>
+    <%= f.submit "Create Lesson",class: 'tiny button' %>
   </div>
 <% end %>
