--- a/app/views/admin/subjects/_new_reading_form.erb
+++ b/app/views/admin/subjects/_new_reading_form.erb
@@ -18,6 +18,6 @@
     <%= f.text_field :name %>
   </div>
   <div class="actions">
-    <%= f.submit class: 'tiny button' %>
+    <%= f.submit "Create Lesson", class: 'tiny button' %>
   </div>
 <% end %>
