--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -11,8 +11,9 @@
     <div class="large-4 columns">
       <div class="panel">
         <h3>Math</h3>
-        <div class="form-input"><%= render partial: 'new_math_form', locals: {subject: @subject} %>
-        </div>
+        <%= link_to "Create Lesson", new_admin_subject_path, id: "new_math_lesson", remote: true, class:'tiny button' %>
+        <!-- <div class="form-input"><%#= render partial: 'new_math_form', locals: {subject: @subject} %> -->
+        <!-- </div> -->
         <table width="100%">
           <thead>
           </thead>
@@ -44,8 +45,9 @@
     <div class="large-4 columns">
       <div class="panel">
         <h3>Critical Reading</h3>
-        <div class="form-input"><%= render partial: 'new_reading_form', locals: {subject: @subject} %>
-        </div>
+        <%= link_to "Create Lesson", new_admin_subject_path, id: "new_reading_lesson", remote: true, class:'tiny button' %>
+        <!-- <div class="form-input"><%#= render partial: 'new_reading_form', locals: {subject: @subject} %> -->
+        <!-- </div> -->
         <table width="100%">
           <thead>
             <tr> 
@@ -80,8 +82,9 @@
     <div class="large-4 columns">
       <div class="panel">
         <h3>Writing</h3>
-        <div><%= render partial: 'new_writing_form', locals: {subject: @subject} %>
-        </div>
+        <%= link_to "Create Lesson", new_admin_subject_path, id: "new_writing_lesson", remote: true, class:'tiny button' %>
+        <!-- <div><%#= render partial: 'new_writing_form', locals: {subject: @subject} %> -->
+        <!-- </div> -->
         <table width="100%">
           <thead>
             <tr>
