--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,9 +78,18 @@
   <footer id="footer">
     <div class="row">
       <div class="small-6 columns"></div>
-      <div class="small-3 columns"></div>
+
       <div class="small-3 columns">
-        <ul>Prepify online</ul>
+        <ul>MORE RESOURCES</ul>
+          <li>College Board</li>
+          <li>Flash Cards</li>
+          <li>SAT info</li>
+          <li>More Stuff</li>
+
+        </ul>
+      </div>
+      <div class="small-3 columns">
+        <ul>PREPIFY</ul>
           <li>Follow us on Twitter</li>
           <li>Like us on Facebook</li>
           <li>Read our blog</li>
