--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
   </section>
   <footer id="footer">
     <div class="row">
-      <div class="small-6 columns"></div>
+      <div class="large-6 columns"></div>
 
       <div class="small-3 columns">
         <ul>MORE RESOURCES</ul>
