--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -2,8 +2,10 @@
 
 <div class= "row">
   <div class="columns large-12">
-     <h2 class='page-title'>User Information</h2>
-     <div class="center-buttons"><a href="<%= admin_users_path %>" class=" button">Back to all Users</a>
+    <h2 class='page-title'>User Information</h2>
+    <div class="center-buttons">
+      <a href="<%= admin_users_path %>" class=" button">Back to all Users</a>
+      <a href="<%= admin_subjects_path %>" class=" button">Back to Admin Dashboard</a>
      </div>
   </div>
 </div>
@@ -27,5 +29,4 @@
   </div>
 </div>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+
