--- a/app/views/admin/users/index.js.erb
+++ b/app/views/admin/users/index.js.erb
@@ -1,7 +1,14 @@
-// alert('update worked!');
 
-
-
-
+// $(document).on('ajax:success', function(e, data) {
+//   console.log('Ajax Response data:', data);
+//   window.e = e;
+//   var user = $(e.target).parent().parent();
+//   if ($(e.target).find('#user_admin').prop('checked')){
+//     $('#admin-user-table').append(user);
+//   }
+//   else {
+//     $('#student-user-table').append(user);
+//   }
+// });
 
 
