--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -53,4 +53,13 @@
 </div>
 
 
+<script type="text/javascript">
+//   (function() {
+//   $('.edit_user input[type=submit]').remove();
+//     $('.edit_user input[type=checkbox]').click(function(){
+//   $('.edit_user').parent().find('form').submit();
+//   });   
+// })();
+init.users();
 
+</script>
