changed fonts, add previous page method

--- a/app/assets/stylesheets/report.css.scss
+++ b/app/assets/stylesheets/report.css.scss
@@ -11,7 +11,7 @@ background-repeat: no-repeat;
 background-size: 100% auto;
 
 h2, h3 {
-	font-family: 'Covered By Your Grace'; 
+	font-family: 'Sansita One'; 
 	}
 .panel {
 	max-width: 400px;
