--- a/app/views/instructions/show.html.erb
+++ b/app/views/instructions/show.html.erb
@@ -17,7 +17,8 @@
       </div>
         <%= progress_bar( progress(@page) )%>
         <hr>
-        <h5><%= link_to "Next Page", next_page(current_user, @page)%></h5>    
+        <h5><%= link_to "Next Page", next_page(current_user, @page)%></h5>
+        <h5><%= link_to 'Previous Page',user_subjects_path(current_user, @page)%></h5>     
     </div>
   </div>
 </div>
