--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,6 +1,5 @@
 <% content_for(:body_id, "subject")%> 
-<link href='http://fonts.googleapis.com/css?family=Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
-<meta charset="utf-8" />
+
 
   <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
@@ -36,14 +35,10 @@
 	      <h3><%= link_to "Start Lesson", start_page(current_user, @subject) %><h3>
 	    <% end %>                 
         
-          <h6 class="subheader">Some information about the test.
-          Some information about the test.
-          Some information about the test.
-          Some information about the test.
-          Some information about the test.
-          Some information about the test.
-          Some information about the test.
-          Some information about the test. </h6>
+          <h6 class="subheader">The Math skills required for the SAT are of a basic standard that should be within the reach of a tenth grade student. You don't need to learn up lots of new formulae but you will need to sharpen up your thinking skills. 
+
+          You are allowed to use a calculator and you should have one with you while doing tests. But for most questions you won't need it: use it mainly to check your arithmetic. You are allowed to do rough work on the paper, so have some rough sheets available when you start the mini tests. Remember, math skills improve with practice.</h6>
+
        </div>
       </div>
 		</div>
