--- a/app/assets/stylesheets/lesson_pages.css.scss
+++ b/app/assets/stylesheets/lesson_pages.css.scss
@@ -23,10 +23,10 @@ background-size: 100% auto;
     		box-shadow: 0 0 20px #9ecaed;
 		}
 		
-		h2, label {
+		h2 label {
 			color: white;
 			text-shadow:0px 0px 10px black;
-			font-family: 'Source Sans Pro', sans-serif;
+			font-family: 'Sansita One', sans-serif;
 		}
 
 
@@ -60,5 +60,9 @@ background-size: 100% auto;
 
  .student-nav {
   font-size: .75em;
+ }
+
+ h2, h3, h4, h5 {
+ 	font-family: 'Sansita One';
  }
 }
