--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -11,9 +11,8 @@
     <div class="large-4 columns">
       <div class="panel">
         <h3>Math</h3>
-        <%= link_to "Create Lesson", new_admin_subject_path, id: "new_math_lesson", remote: true, class:'tiny button' %>
-        <!-- <div class="form-input"><%#= render partial: 'new_math_form', locals: {subject: @subject} %> -->
-        <!-- </div> -->
+        <a href="#" class="show-lesson-form tiny button">New Lesson</a>
+        <%= render 'admin/subjects/new_math_form', subject: @subject %>
         <table width="100%">
           <thead>
           </thead>
@@ -118,4 +117,9 @@
   </div>
 </div>
 
+  <script type="text/javascript">
+
+// subjectinit.subjects();
+
+</script>
   
