--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -44,9 +44,8 @@
     <div class="large-4 columns">
       <div class="panel">
         <h3>Critical Reading</h3>
-        <%= link_to "Create Lesson", new_admin_subject_path, id: "new_reading_lesson", remote: true, class:'tiny button' %>
-        <!-- <div class="form-input"><%#= render partial: 'new_reading_form', locals: {subject: @subject} %> -->
-        <!-- </div> -->
+        <a href="#" class="show-lesson-form tiny button">New Lesson</a>
+        <%= render 'admin/subjects/new_reading_form', subject: @subject %>
         <table width="100%">
           <thead>
             <tr> 
@@ -81,9 +80,8 @@
     <div class="large-4 columns">
       <div class="panel">
         <h3>Writing</h3>
-        <%= link_to "Create Lesson", new_admin_subject_path, id: "new_writing_lesson", remote: true, class:'tiny button' %>
-        <!-- <div><%#= render partial: 'new_writing_form', locals: {subject: @subject} %> -->
-        <!-- </div> -->
+        <a href="#" class="show-lesson-form tiny button">New Lesson</a>
+        <%= render 'admin/subjects/new_writing_form', subject: @subject %>
         <table width="100%">
           <thead>
             <tr>
